Fix case in documentation of qobjectbridge bindings

The method toDataURL does not work, but calling toDataUrl does. This
patch updates the documentation to match the exported method name.

Task-number: QTBUG-40268
Change-Id: Icf0ee233df141d43367da045834e6a42c9afb31a
Reviewed-by: Simon Hausmann <simon.hausmann@digia.com>